chore: Migrate to Java 9+ immutable collection methods
Closes #459.