@@ -82,14 +82,14 @@ public final class StringResolvingMatchedTokenConsumer extends MatchedTokenConsu
       if (TagInternals.sanitizeAndCheckValidTagName(tag)) {
         final List<Token> tokens = tokenize(match, false);
         final List<TagPart> parts = new ArrayList<>();
-        final List<Token> childs = tokens.isEmpty() ? null : tokens.get(0).childTokens();
+        final List<Token> childs = tokens.isEmpty() ? null : tokens.getFirst().childTokens();
         if (childs != null) {
           for (int i = 1; i < childs.size(); i++) {
             parts.add(new TagPart(match, childs.get(i), this.tagProvider));
           }
         }
         // we might care if it's a pre-process!
-        final Tag replacement = this.tagProvider.resolve(TokenParser.TagProvider.sanitizePlaceholderName(tag), parts, tokens.get(0));
+        final Tag replacement = this.tagProvider.resolve(TokenParser.TagProvider.sanitizePlaceholderName(tag), parts, tokens.getFirst());
 
         if (replacement instanceof PreProcess preProcess) {
           this.builder.append(Objects.requireNonNull(preProcess.value(), "PreProcess replacements cannot return null"));
