@@ -23,12 +23,10 @@
  */
 package net.kyori.adventure.text.minimessage;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import java.util.function.UnaryOperator;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.ComponentLike;
-import net.kyori.adventure.text.minimessage.tag.Tag;
 import net.kyori.adventure.text.minimessage.tag.resolver.ArgumentQueue;
 import net.kyori.adventure.text.minimessage.tag.resolver.TagResolver;
 import net.kyori.adventure.text.serializer.ansi.ANSIComponentSerializer;
@@ -75,11 +73,11 @@ public abstract class AbstractTest {
   }
 
   public static ArgumentQueue emptyArgumentQueue(final Context context) {
-    return new ArgumentQueueImpl<>(context, Collections.<Tag.Argument>emptyList());
+    return new ArgumentQueueImpl<>(context, List.of());
   }
 
   public static Component virtualOfChildren(final ComponentLike... children) {
     return Component.virtual(Void.class, context -> Component.empty()) // not part of equality... should it be?
-      .children(Arrays.asList(children));
+      .children(List.of(children));
   }
 }
